# determined

./: .coverage  .gitignore  CHANGELOG.md  README.md  main.py  mcp.json  pyproject.toml
determined/mcp/: README.md  __init__.py  processor.py  schemas.py  server.py
docs/: expected_workflow.md  project_spec.md
docs/mcp/: README.md
tests/: test_apply_edge_cases.py  test_coverage_marker.py  test_internal_patch_api.py  test_main_server.py  test_mcp_end_to_end.py  test_patch_context_cases.py  test_processor_unit.py  test_remove_only_hunk.py  test_review_flow.py  test_task_workflow.py
